<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/ex5"
    tools:context=".ut01.ex05.Ut01Ex05Activity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/hamburguesa"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_image"
            android:background="@drawable/hamburguesa"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ex5"
            android:background="@color/white_50"
            android:padding="@dimen/margin_top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex05pos"
            android:textColor="@color/red"
            android:textSize="@dimen/ex5" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/ex5"
            android:layout_height="@dimen/width_star"
            android:tint="@color/red"
            android:layout_toRightOf="@+id/texto"
            app:srcCompat="@drawable/trophy"/>
        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:text="@string/ex05ham"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ex05res"
        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/puntos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex05total"/>

        <TextView
            android:id="@+id/media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/puntos"
            android:layout_marginLeft="@dimen/ex5"
            android:text="@string/ex05media"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/ex5"
            android:layout_height="@dimen/ex5"
            app:srcCompat="@drawable/iconstar"
            android:tint="@color/yellow"
            android:layout_toEndOf="@id/media"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            >
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/share"
                android:layout_width="@dimen/ex5"
                android:layout_height="@dimen/ex5"
                app:srcCompat="@drawable/share"
                android:tint="@color/red"
                android:layout_marginRight="20dp"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/corazon"
                android:layout_width="@dimen/ex5"
                android:layout_height="@dimen/ex5"
                app:srcCompat="@drawable/iconcorazon"
                android:tint="@color/red"
                android:layout_toEndOf="@+id/share"
                android:layout_marginRight="20dp"
                />
        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>